<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:title="Symmetric"
        android:summary="The players start with the same time"
        android:defaultValue="true"
        android:key="same_time" />

    <!-- Symmetric time Category -->
    <PreferenceCategory
        android:title="Time"
        android:key="standard_time_category">

        <ListPreference
            android:key="standard_game_mode"
            android:title="@string/title_game_mode"
            android:summary="@string/summary_game_mode"
            android:entries="@array/GameMode"
            android:entryValues="@array/GameModeValue"/>

        <ListPreference
            android:key="standard_predefined_mode"
            android:title="@string/title_predefined_mode"
            android:summary="@string/summary_predefined_mode"
            android:entries="@array/PredefinedGameModes"
            android:entryValues="@array/PredefinedGameModesValues"/>

        <com.example.chessclock.DoubleNumberPickerPreference
            android:key="standard_starting_time"
            android:title="@string/title_starting_time"
            android:summary="@string/summary_starting_time"
            android:defaultValue="3:0" />

        <com.example.chessclock.NumberPickerPreference
            android:key="standard_increment"
            android:title="@string/title_increment"
            android:summary="@string/summary_increment"
            android:defaultValue="2" />

        <com.example.chessclock.NumberPickerPreference
            android:key="standard_delay"
            android:title="@string/title_delay"
            android:summary="@string/summary_delay"
            android:defaultValue="0" />

        <!--<com.example.chessclock.NumberPickerPreference-->
            <!--android:key="standard_time_control"-->
            <!--android:title="Time Control"-->
            <!--android:summary="Increment starts at move"-->
            <!--android:defaultValue="0" />-->

    </PreferenceCategory>

    <!-- White Time setting if times aren't symmetric -->
    <PreferenceCategory
        android:title="Time for White"
        android:key="white_time_category"
        app:isPreferenceVisible="false">

        <ListPreference
            android:key="white_game_mode"
            android:title="@string/title_game_mode"
            android:summary="@string/summary_game_mode"
            android:entries="@array/GameMode"
            android:entryValues="@array/GameModeValue"/>

        <ListPreference
            android:key="white_predefined_mode"
            android:title="@string/title_predefined_mode"
            android:summary="@string/summary_predefined_mode"
            android:entries="@array/PredefinedGameModes"
            android:entryValues="@array/PredefinedGameModesValues"/>

        <com.example.chessclock.DoubleNumberPickerPreference
            android:key="white_starting_time"
            android:title="@string/title_starting_time"
            android:summary="@string/summary_starting_time"
            android:defaultValue="3:0" />

        <com.example.chessclock.NumberPickerPreference
            android:key="white_increment"
            android:title="@string/title_increment"
            android:summary="@string/summary_increment"
            android:defaultValue="2" />

        <com.example.chessclock.NumberPickerPreference
            android:key="white_delay"
            android:title="@string/title_delay"
            android:summary="@string/summary_delay"
            android:defaultValue="0" />

        <!--<com.example.chessclock.NumberPickerPreference-->
            <!--android:key="white_time_control"-->
            <!--android:title="Time Control"-->
            <!--android:summary="Whites increment starts at move"-->
            <!--android:defaultValue="0" />-->

    </PreferenceCategory>

    <!-- Black Time setting if times aren't symmetric -->
    <PreferenceCategory
        android:title="Time for Black"
        android:key="black_time_category"
        app:isPreferenceVisible="false">

        <ListPreference
            android:key="black_game_mode"
            android:title="@string/title_game_mode"
            android:summary="@string/summary_game_mode"
            android:entries="@array/GameMode"
            android:entryValues="@array/GameModeValue"/>

        <ListPreference
            android:key="black_predefined_mode"
            android:title="@string/title_predefined_mode"
            android:summary="@string/summary_predefined_mode"
            android:entries="@array/PredefinedGameModes"
            android:entryValues="@array/PredefinedGameModesValues"/>

        <com.example.chessclock.DoubleNumberPickerPreference
            android:key="black_starting_time"
            android:title="@string/title_starting_time"
            android:summary="@string/summary_starting_time"
            android:defaultValue="3:0" />

        <com.example.chessclock.NumberPickerPreference
            android:key="black_increment"
            android:title="@string/title_increment"
            android:summary="@string/summary_increment"
            android:defaultValue="2" />

        <com.example.chessclock.NumberPickerPreference
            android:key="black_delay"
            android:title="@string/title_delay"
            android:summary="@string/summary_delay"
            android:defaultValue="0" />

        <!--<com.example.chessclock.NumberPickerPreference-->
            <!--android:key="black_time_control"-->
            <!--android:title="Time Control"-->
            <!--android:summary="Blacks increment starts at move"-->
            <!--android:defaultValue="0" />-->

    </PreferenceCategory>
</PreferenceScreen>